# -

./: AES_Encrypt.c  AES_Encrypt.cpp  AES_Encrypt.h  CMakeLists.txt  CMakelists.txt  README.md  SNOW_3G.c  SNOW_3G.cpp  SNOW_3G.h  ZUC.c  ZUC.cpp  ZUC.h  eea1.c  eea1.cpp  eea2.cpp  eea3.cpp  eia1.c  eia1.cpp  eia2.cpp  eia3.c  eia3.cpp  hw_secReg.h  log.cpp  log.h  main.cpp  plat_security.c  plat_security.cpp  plat_security.h  secReg.c  secReg.cpp  secReg.h  sec_CheckSum.c  sec_reg.cpp  sec_reg.h  sec_type.h  security.c  security.cpp  security.h  securityFpga.cpp  securityFpga.h  (+6 more)
pattern_cmodel/: Security_Random_SingleMaster.out  input_EEA1_Test3.txt  input_EEA2_Test3.txt  input_EEA3_Test1.txt  input_EIA1_Test4.txt  input_EIA2_Test2.txt  input_EIA3_Test1.txt  input_EIA3_Test2.txt  input_EIA3_Test3.txt  input_master.txt  output_EEA1_Test3.txt  output_EEA2_Test3.txt  output_EEA3_Test1.txt  output_EIA1_Test4.txt  output_EIA2_Test2.txt  output_EIA3_Test1.txt  output_EIA3_Test2.txt  output_EIA3_Test3.txt  security_random_slave_unalign.out  security_random_slave_unalign_1_16.out  test_pattern_transform_security.py
pattern_fpga/: sec_addr_unaligned_000.h  sec_addr_unaligned_001.h  sec_addr_unaligned_002.h  sec_addr_unaligned_003.h  sec_addr_unaligned_004.h  sec_addr_unaligned_005.h  sec_addr_unaligned_006.h  sec_fixed_S_000.h  sec_fixed_S_001.h  sec_fixed_S_002.h  sec_fixed_S_003.h  sec_fixed_S_004.h  sec_fixed_S_005.h  sec_fixed_S_006.h  sec_fixed_mM_000.h  sec_fixed_mM_001.h  sec_fixed_mM_002.h  sec_fixed_mM_003.h  sec_fixed_mM_004.h  sec_fixed_mM_005.h  sec_fixed_mM_006.h  (+62 more)
